Fixed quiz question mark align issue.

--- a/frontend/src/scss/quiz/_quiz-layout.scss
+++ b/frontend/src/scss/quiz/_quiz-layout.scss
@@ -18,7 +18,7 @@
   }
 
   &__title {
-    margin-bottom: 0;
+    margin: 0;
   }
 
   &__header {
